# slowmath

./: CMakeLists.txt  README.md  vcpkg.json
assets/css/: style.scss
ci/: .travis.yml  azure-pipelines.yml
extra/: InstallNatvis-VS2019.bat  slowmath.natjmc
include/slowmath/: arithmetic.hpp  fenv.hpp
include/slowmath/detail/: arithmetic.hpp  bits.hpp  cast.hpp  error-handling.hpp  errors.hpp  factorize.hpp  fenv.hpp  gcd-lcm.hpp  pow-log.hpp  round.hpp  type_traits.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  legacy-tests.cpp  test-arithmetic.cpp  test-bits.cpp  test-cast.cpp  test-factorize.cpp  test-gcd-lcm.cpp  test-pow-log.cpp  test-round.cpp
test/cuda/: CMakeLists.txt
test/fenv/: CMakeLists.txt  test-fenv.cpp
